[gd_scene load_steps=7 format=2]

[ext_resource path="res://PageState.tscn" type="PackedScene" id=1]
[ext_resource path="res://OptionButton.gd" type="Script" id=2]
[ext_resource path="res://StreamValues.gd" type="Script" id=3]
[ext_resource path="res://MainMenu.gd" type="Script" id=4]
[ext_resource path="res://SpinBox.gd" type="Script" id=5]
[ext_resource path="res://Simulate.gd" type="Script" id=6]

[node name="Node2D" type="Node2D"]
script = ExtResource( 4 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_top = 71.4142
margin_right = 1024.0
margin_bottom = 600.414
custom_constants/separation = 100
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_right = 1024.0
margin_bottom = 84.0
custom_constants/separation = 150
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 105.0
margin_right = 399.0
margin_bottom = 84.0
custom_constants/separation = 40

[node name="PageRepAlgo" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_right = 294.0
margin_bottom = 20.0
custom_constants/separation = 38
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/PageRepAlgo"]
margin_left = 1.0
margin_top = 3.0
margin_right = 186.0
margin_bottom = 17.0
text = "Page Replacement Algorithm"

[node name="OptionButton" type="OptionButton" parent="VBoxContainer/HBoxContainer/VBoxContainer/PageRepAlgo"]
margin_left = 224.0
margin_right = 292.0
margin_bottom = 20.0
text = "Select"
script = ExtResource( 2 )

[node name="MaxAge" type="HBoxContainer" parent="VBoxContainer/HBoxContainer/VBoxContainer"]
margin_top = 60.0
margin_right = 294.0
margin_bottom = 84.0
custom_constants/separation = 111

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer/MaxAge"]
margin_top = 5.0
margin_right = 109.0
margin_bottom = 19.0
text = "Number of Pages"

[node name="SpinBox" type="SpinBox" parent="VBoxContainer/HBoxContainer/VBoxContainer/MaxAge"]
margin_left = 220.0
margin_right = 294.0
margin_bottom = 24.0
script = ExtResource( 5 )

[node name="VBoxContainer2" type="VBoxContainer" parent="VBoxContainer/HBoxContainer"]
margin_left = 549.0
margin_right = 919.0
margin_bottom = 84.0
custom_constants/separation = 13
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 16.0
margin_right = 370.0
margin_bottom = 30.0
text = "                                Stream of Values"

[node name="StreamValues" type="LineEdit" parent="VBoxContainer/HBoxContainer/VBoxContainer2"]
margin_top = 43.0
margin_right = 370.0
margin_bottom = 67.0
custom_constants/minimum_spaces = 90
script = ExtResource( 3 )

[node name="SimulateButton" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 184.0
margin_right = 1024.0
margin_bottom = 204.0
alignment = 1

[node name="Simulate" type="Button" parent="VBoxContainer/SimulateButton"]
margin_left = 478.0
margin_right = 546.0
margin_bottom = 20.0
text = "Simulate"
script = ExtResource( 6 )

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 304.0
margin_right = 1024.0
margin_bottom = 304.0

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/HBoxContainer2"]
draw_center = false

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer/HBoxContainer2/NinePatchRect"]
margin_left = 53.0
margin_top = -27.0
margin_right = 960.0
margin_bottom = 211.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="States" type="HBoxContainer" parent="VBoxContainer/HBoxContainer2/NinePatchRect/ScrollContainer"]
custom_constants/separation = 140
alignment = 2

[node name="Control" parent="VBoxContainer/HBoxContainer2/NinePatchRect/ScrollContainer/States" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 0.0
margin_bottom = 0.0

[connection signal="item_selected" from="VBoxContainer/HBoxContainer/VBoxContainer/PageRepAlgo/OptionButton" to="VBoxContainer/HBoxContainer/VBoxContainer/PageRepAlgo/OptionButton" method="_on_OptionButton_item_selected"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer/VBoxContainer/MaxAge/SpinBox" to="VBoxContainer/HBoxContainer/VBoxContainer/MaxAge/SpinBox" method="_on_SpinBox_value_changed"]
[connection signal="pressed" from="VBoxContainer/SimulateButton/Simulate" to="." method="_on_Simulate_pressed"]
